# text2video

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: ai-engine.md  backend.md  data.md  devops.md  lead.md
alembic/: env.py
alembic/versions/: bffe4a7106b9_phase0_mvp_schema.py
app/: dependencies.py  main.py
app/ai/: base.py  duration_planner.py  novel_splitter.py  pipeline.py  worker.py
app/api/: router.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/models/: __init__.py  asset.py  base.py  character.py  character_image.py  project.py  sensitive_word.py  shot.py  storyboard.py  task.py  tts_config.py  user.py
app/repositories/: __init__.py  asset_repo.py  base.py  character_image_repo.py  character_repo.py  project_repo.py  sensitive_word_repo.py  shot_repo.py  (+3 more)
data/: sensitive_words.txt  test_novel.txt  test_novel_v2.txt
docs/: architecture.md  development-plan.md  dialogue_manga_architecture.md  dialogue_manga_example_walkthrough.md  dialogue_manga_flow.html  director_plan_before_after.md  grid_prompt_before_after_comparison.md  narration_manga_v2_architecture.md  narration_manga_v2_design_questions.md  narration_manga_v2_example_walkthrough.md  narration_manga_v2_flow.html  novel_splitter_novel_test_report.md  novel_splitter_test_report.md  pipeline_v10_design.py  pipeline_v11_design.py  pipeline_v9_design.py  workflow-guide.html
scripts/: e2e_test.py  e2e_v10.py  e2e_v11.py  e2e_v11b.py  test_kling_auth.py
tests/: conftest.py
(+83 files in other folders)
